// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkNudgerRow should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-nudger-row"
  >
    <label
      class="bpk-label"
      for="nudger"
    >
      <span
        class="bpk-nudger-row__title-subtitle"
        role="text"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          title
        </span>
      </span>
    </label>
    <div
      class="bpk-nudger"
    >
      <button
        aria-controls="nudger"
        class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
        title="Decrease"
        type="button"
      >
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            class="bpk-nudger__icon"
            height="16"
            style="width: 1rem; height: 1rem;"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.5 12A1.5 1.5 0 013 10.5h18a1.5 1.5 0 010 3H3A1.5 1.5 0 011.5 12z"
            />
          </svg>
        </span>
      </button>
      <input
        aria-live="polite"
        class="bpk-nudger__input bpk-nudger__input--numeric"
        id="nudger"
        readonly=""
        tabindex="-1"
        type="text"
        value="2"
      />
      <button
        aria-controls="nudger"
        class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
        title="Increase"
        type="button"
      >
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            class="bpk-nudger__icon"
            height="16"
            style="width: 1rem; height: 1rem;"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1.5A1.5 1.5 0 0010.5 3v7.5H3a1.5 1.5 0 000 3h7.5V21a1.5 1.5 0 003 0v-7.5H21a1.5 1.5 0 000-3h-7.5V3A1.5 1.5 0 0012 1.5z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkNudgerRow should render with subtitle prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-nudger-row custom-classname"
  >
    <label
      class="bpk-label"
      for="nudger"
    >
      <span
        class="bpk-nudger-row__title-subtitle"
        role="text"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          title
        </span>
        <span
          class="bpk-text bpk-text--body-default bpk-nudger-row__subtitle"
        >
          subtitle
        </span>
      </span>
    </label>
    <div
      class="bpk-nudger"
    >
      <button
        aria-controls="nudger"
        class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
        title="Decrease"
        type="button"
      >
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            class="bpk-nudger__icon"
            height="16"
            style="width: 1rem; height: 1rem;"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.5 12A1.5 1.5 0 013 10.5h18a1.5 1.5 0 010 3H3A1.5 1.5 0 011.5 12z"
            />
          </svg>
        </span>
      </button>
      <input
        aria-live="polite"
        class="bpk-nudger__input bpk-nudger__input--numeric"
        id="nudger"
        readonly=""
        tabindex="-1"
        type="text"
        value="2"
      />
      <button
        aria-controls="nudger"
        class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
        title="Increase"
        type="button"
      >
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            class="bpk-nudger__icon"
            height="16"
            style="width: 1rem; height: 1rem;"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1.5A1.5 1.5 0 0010.5 3v7.5H3a1.5 1.5 0 000 3h7.5V21a1.5 1.5 0 003 0v-7.5H21a1.5 1.5 0 000-3h-7.5V3A1.5 1.5 0 0012 1.5z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkNudgerRow should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-nudger-row custom-classname"
  >
    <label
      class="bpk-label"
      for="nudger"
    >
      <span
        class="bpk-nudger-row__title-subtitle"
        role="text"
      >
        <span
          class="bpk-text bpk-text--heading-5"
        >
          title
        </span>
      </span>
    </label>
    <div
      class="bpk-nudger"
    >
      <button
        aria-controls="nudger"
        class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
        title="Decrease"
        type="button"
      >
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            class="bpk-nudger__icon"
            height="16"
            style="width: 1rem; height: 1rem;"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.5 12A1.5 1.5 0 013 10.5h18a1.5 1.5 0 010 3H3A1.5 1.5 0 011.5 12z"
            />
          </svg>
        </span>
      </button>
      <input
        aria-live="polite"
        class="bpk-nudger__input bpk-nudger__input--numeric"
        id="nudger"
        readonly=""
        tabindex="-1"
        type="text"
        value="2"
      />
      <button
        aria-controls="nudger"
        class="bpk-button bpk-button--icon-only bpk-button--secondary bpk-nudger__button"
        title="Increase"
        type="button"
      >
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            class="bpk-nudger__icon"
            height="16"
            style="width: 1rem; height: 1rem;"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1.5A1.5 1.5 0 0010.5 3v7.5H3a1.5 1.5 0 000 3h7.5V21a1.5 1.5 0 003 0v-7.5H21a1.5 1.5 0 000-3h-7.5V3A1.5 1.5 0 0012 1.5z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
